Added 'archives' link to reference old site posts

--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,9 @@ plugins:
 
 footer:
   links:
+    - label: "Archives"
+      icon: "fas fa-fw fa-archive"
+      url: "/archives"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/shpeucf/shpeucf.github.io"
