--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,10 @@
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: "Tech Committee"
 subtitle: "SHPE UCF"
 email: tech.shpeucf@gmail.com
-repository: "shpeucf/shpeucf.github.io"
+repository: "shpeucf/apptutorial"
 description: >- # this means to ignore newlines until "baseurl:"
-  Site for members to learn (hands-on) about react-native and all its features.
+  Site for members to learn about react-native and all its features.
 logo: "/assets/images/shpe-logo.png"
 # masthead_title: "Tech Website"
 search: true
@@ -45,11 +41,11 @@ plugins:
 footer:
   links:
     - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/shpeucf/shpeucf.github.io"
+      icon: "fab fa-github"
+      url: "https://github.com/SHPEUCF/apptutorial"
     - label: "Bugs"
       icon: "fas fa-bug"
-      url: "https://github.com/shpeucf/shpeucf.github.io/issues"
+      url: "https://github.com/SHPEUCF/apptutorial/issues"
 
 defaults:
   # _pages
